# Sanbot-MCU-Bridge

./: .gitignore  .markdownlint.json  README.md  pyproject.toml  pyrightconfig.json
.archive/: README.md
.archive/programs/: setup_pi_tester.sh  usb_bridge_tester.py
.archive/sanbot/audio_bridge/: audio.py
.archive/sanbot/camera_bridge/: __init__.py  camera.py
.archive/sanbot/mcu_bridge/: usb_bridge.py
.archive/sanbot_mcu_bridge.egg-info/: entry_points.txt  top_level.txt
.archive/usage-docs/: USAGE_LIBRARY.md
.codex/environments/: environment.toml
core/: CMakeLists.txt  install.sh
core/gui-app/: main.cpp
core/src/: command-database-smoke.cpp  command-database.cpp  command-database.h  control-catalogue.cpp  control-catalogue.h  main.cpp  packet-assembler.cpp  packet-assembler.h  test-mcu.cpp  usb-send.cpp  usb-send.h
dev/: TODO.md
dev-docs/: CHANGELOG.md  CONFORMANCE.md  KEY_FILES.md  RELEASE_TODO.md
dev-docs/analysis/mcu_sql/: README.md
dev/analysis/: mcu_cmd_map.json  uvcbean_files.txt
dev/analysis/mcu_sql/: README.md
dev/helpers/: cli_payload_builder.html
dev/refs/OBAnalysis/: command_data.json  command_dataset.json  command_dataset_with_fields.json  file_checklist.json  mcu_references.txt
dev/refs/OBAnalysis/mcu_sql/: sanbot_mcu.sqlite
dev/refs/PseudoLogic/: MCU-Command-Catalog.md  MCU-Command-Catalogue.md  USB_Recieve.md  USB_Send.md  mcu_assembler-v2.md
dev/refs/pseudoLogic/: mcu_assembler.md
docs/: Catalog-Tested-Working.md  Catalogue-Tested.md  History.md  The-Plan.md  codex-or-no(dex).md
mcu-command-database/: EXTRACTION_NOTES.md  README.md  sanbot_mcu_commands.sql  sanbot_mcu_commands.sqlite  schema.sql
programs/: __init__.py  setup_pi_tester.sh  test_bridge.py  usb_bridge_tester.py  usb_bridge_tester_demo.py
programs/src/: packet-assembler.cpp
sanbot/: __init__.py
sanbot/mcu_bridge/: USAGE.md  __init__.py  usb_bridge.py
sanbot/mcu_bridge/lib/: bridge.py  safety.py
sanbot_mcu_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
usage-docs/: USAGE_AUDIO.md  USAGE_LIBRARY.md  USB_BRIDGE_TESTER.md
